--- a/projeto22.htm
+++ b/projeto22.htm
@@ -3,53 +3,69 @@
   <head>
         <meta charset="utf-8">
         <title>MAFALDAMARINHO</title>
-        <link rel="stylesheet" href="styles.css">
-  </head>
-  <!--<body>
-    <div class="flexbox-containner">
-      <div class="flex-box">1</div>
-      <div class="flex-box">2</div>
-      <div class="flex-box">3</div>
-    </div>
+        <link rel="stylesheet" href="styles.scss">
 
-  </body>-->
+  </head>
+
   <body>
     <header>
-
-    <ul class="indice">
+   <ul class="indice">
       <li><a href="#1" style="text-decoration:none">aboutme</a></li>
-      <li><a href="#2" style="text-decoration:none">work</a></li>
-      <li><a href="#3" style="text-decoration:none">contact</a></li>
+      <li><a href="#2" style="text-decoration:none">projects</a></li>
+      <li><a href="#3" style="text-decoration:none">references</a></li>
+      <li><a href="#4" style="text-decoration:none">contacts</a></li>
     </ul>
   </header>
+<section class="imagemprincipal">
 <div class="inicio">
     <h1>Mafalda Marinho</h1>
     <h2>Comunication Design</h2>
-  </div>
+</div>
+</section>
 
-<!--<div class="texto">-->
-  <img src="imagem.jpg" align="left" alt="eu" />
+<section class="primeiro" id="1">
+  <img src="imagem.jpg" class="foto" align="left" alt="eu" />
+  <h3 class="topicos">about me</h3>
     <p class="texto">Hi ! My name is Mafalda Marinho, I`m a portuguese grafic designer student from Porto, Portugal. I`m finishing my last year of Comunication Design at Faculty of Fine Arts of University of Porto. And I can say that i love all things Design, however my main interests pass through the  editorial design, branding and typography. In this site you find some of my works.</p>
-  <!--</div>-->
+</section>
+
+<section class="segundo" id="2">
+
+
+<div class="grupoelementos">
+       <li><div class="elemento"></div><figure><a href="editorial.htm" style="text-decoration:none"><img src="imagenspag.principal/editorial.png" alt="editorial"/></a></li>
+
+      <li><div class="elemento"></div><figure><img src="imagenspag.principal/typography.png" alt="typography2" /></figure></a></li>
+
+      <li><div class="elemento"></div><figure><img src="imagenspag.principal/branding.png" alt="branding3"  /></figure></a></li>
+
+      <li><div class="elemento"></div><figure><img src="imagenspag.principal/photography.png" alt="photography4" /></figure></a></li>
+
+      <!--<li><div class="elemento"></div><figure><img src="dois.jpg" alt="trabalho5" onmouseover="this.src='nomecinco.jpg'" onmouseout="this.src='dois.jpg'" /><figcaption>editorial</figcaption></figure></a></li>
+
+      <li><div class="elemento"></div><figure><img src="seis.jpg" alt="trabalho6" onmouseover="this.src='nomeseis.jpg'" onmouseout="this.src='seis.jpg'" /><figcaption>calligraphy</figcaption></figure></a></li>-->
+      </ul>
+    </div>
+    </section>
+
+    <section class="terceiro" id="4">
+      <!--  <p>contact</p>
+      <h3>Get in touch!</h3>-->
+      <!--<ul class="rsociais">-->
+      <div class="logos">
+      <a href="https://www.behance.net/MafaldaMarinho"><img src="imagenspag.principal/um (2)-02-02.png" alt="behance" class="behance"/></a>
+      <a href="https://pt.pinterest.com/mafaldaki/"><img src="imagenspag.principal/tres-04.png" alt="pinterest" class="pinterest"/></a>
+      <a href="https://vimeo.com/user39193725/videos/all/sort:date"><img src="imagenspag.principal/quatro-05.png" alt="vimeo" class="vimeo"/></a>
+      </div>
+
+        <p class="email">mafalda_marinhomr@hotmail.com</p>
+
+    </section>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <script src="jquery-3.1.1.js"></script>
+    <script src="scripts.js"></script>
 
 
   </body>
